--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Ken's Web Site</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 </head>
 
 <body>
-  <h1>Greetings </h1>
-
-  <img src= "https://lh3.googleusercontent.com/7SvZz0wF51cb9OlJ3iTzAwuP3vr99Ll8MhHUVXXVokAfNllZKBbcr1qOPXDY2oEvmbqgPinFsRSmNjGdYmConB6auwYFKLXX-TkiCHGgt01_jHok8rmCrIbiKlEwuHShGM6Mibynueec2H7JmdtzAeyv_1-SNTMyKM4yx_YcGVaHb85dSx1Yctf1RlwKiOsF7pXW5UqoqWsqbHWsIVfCMx3qSNmkG1SbbR2MXBe2uBrqCUeLkd379gLRxwUZKQSboQAWi57iU_ztGw4Y598hRYW5LlqFjhDFOChIMiH-O1UobznXQguOKfpYT0vtyRlFHg6xUiJh8HSj4SP5E3VE4COdJKHjMsRxmazc66nbQTd2GnNQi8iVySbzHNlFM9KXwP61sZ4Aix-CSYwG9IfIpN93Zdrse244BUJdT-WmS3NAGd4LF2VC9npjHTk7ZhS_o9KN3J3a9N_zYG4_rQ23vYO6f-Pn_l8t2GuiRLC5XzA0G2k-6Lz0Y4IVXwSL32Ltw95cfRG6cHkQ7Qhm3477bHklIeYZMH87NbbGhvxlD3F_ayAcV7dzaJlPUZV2KUKprRU7zcH81XS777Wpa1dMyzaQbWYIgfr3tNEjMJZfsBvm6qF7RWWNSF4_UUeeheReh8ySdXaN0qzEmRbLT-M2dQ1CFAJko-o2CQTuifVVqZe0Ufn3jFPBV--3VZS0Qw=w1772-h1329-no?authuser=0" 
-   width="250" height="200" alt="Ken">
+  <h1 class="display-1">Greetings </h1>
 
 
 
-  <p> Welcome to My Website</p>
-  <p> Here is a little bit about me</p>
+   <img src="https://lh3.googleusercontent.com/7SvZz0wF51cb9OlJ3iTzAwuP3vr99Ll8MhHUVXXVokAfNllZKBbcr1qOPXDY2oEvmbqgPinFsRSmNjGdYmConB6auwYFKLXX-TkiCHGgt01_jHok8rmCrIbiKlEwuHShGM6Mibynueec2H7JmdtzAeyv_1-SNTMyKM4yx_YcGVaHb85dSx1Yctf1RlwKiOsF7pXW5UqoqWsqbHWsIVfCMx3qSNmkG1SbbR2MXBe2uBrqCUeLkd379gLRxwUZKQSboQAWi57iU_ztGw4Y598hRYW5LlqFjhDFOChIMiH-O1UobznXQguOKfpYT0vtyRlFHg6xUiJh8HSj4SP5E3VE4COdJKHjMsRxmazc66nbQTd2GnNQi8iVySbzHNlFM9KXwP61sZ4Aix-CSYwG9IfIpN93Zdrse244BUJdT-WmS3NAGd4LF2VC9npjHTk7ZhS_o9KN3J3a9N_zYG4_rQ23vYO6f-Pn_l8t2GuiRLC5XzA0G2k-6Lz0Y4IVXwSL32Ltw95cfRG6cHkQ7Qhm3477bHklIeYZMH87NbbGhvxlD3F_ayAcV7dzaJlPUZV2KUKprRU7zcH81XS777Wpa1dMyzaQbWYIgfr3tNEjMJZfsBvm6qF7RWWNSF4_UUeeheReh8ySdXaN0qzEmRbLT-M2dQ1CFAJko-o2CQTuifVVqZe0Ufn3jFPBV--3VZS0Qw=w1772-h1329-no?authuser=0" class="rounded mx-auto d-block" alt="portrait" width="250" height="200">
+
+
+  <p class="lead"> Welcome to My Website</p>
+  <p> <em>Here is a little bit about me</em></p>
 
   <ul>
-    <li><strong>Email:</strong><a href="#">yehitsken@gmail.com</a></li>
-    <li><strong>GitHub:</strong><a href="#">https://github.com/kenjyeh</a></li>
-    <li><strong>Twitter:</strong><a href="#">https://twitter.com/yehken</a></li>
+    <li><strong>Email:</strong><a href="yehitsken@gmail.com">yehitsken@gmail.com</a></li>
+    <li><strong>GitHub:</strong><a href="https://github.com/kenjyeh" target="_blank">github.com/kenjyeh</a></li>
+    <li><strong>Twitter:</strong><a href="https://twitter.com/yehken"  target="_blank" >twitter.com/yehken</a></li>
   </ul>  
-
-  <table border ="1">
+  
+  <table class="table table-success table-striped table-hover">
     <caption>My Favorites</caption>
     <tr>
       <th>Books</th>
@@ -44,13 +46,20 @@
 
     <tr>
       <td>Da Vinci Code</td>
-      <td>A Beautiful Mind</td>
+      <td>Knives Out</td>
       <td>Civilization IV</td>
     </tr>
 
 
 
   </table>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 </body>
 
